--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Chris Murphy
 description: Tech analyst, tinkerer, mixologist.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: /images/headshot.jpg
 
 #
 # Flags below are optional
@@ -18,15 +18,15 @@ avatar:
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: chris@murphnet.org
+  facebook: chris.murphy1
   flickr:
-  github: 
-  instagram:
+  github: murph234
+  instagram: the_gadgetman
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: 
+  rss: feed
+  twitter: the_gadgetman
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
