--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Chris Murphy
 
 # Short bio or description (displayed in the header)
-description: Tech analyst, tinkerer, mixologist.
+description: Husband, parent, pet owner, tech analyst, tinkerer, mixologist.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/headshot.jpg
@@ -37,11 +37,11 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-117906097-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://www.murphnet.org
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
