--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Chris Murphy
 description: Husband, parent, pet owner, tech analyst, tinkerer, mixologist.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/headshot.jpg
+avatar: /images/headshot.png
 
 #
 # Flags below are optional
